--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         font-family: 'Inter', sans-serif;
         overflow-x: hidden;
       }
+      /* Fix for fixed header overlapping sections */
+      [id] {
+        scroll-margin-top: 100px;
+      }
       .glass-nav {
         background: rgba(5, 5, 5, 0.85);
         backdrop-filter: blur(16px);
@@ -98,9 +102,12 @@
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.4",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.4/client",
+    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
     "react/": "https://esm.sh/react@^19.2.4/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
   }
 }
 </script>
